--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Gerald Pape <ubergesundheit@googlemail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "node_modules/.bin/eslint --fix \"{src,test,.scripts}/**/*.js\"",
-    "test": "node_modules/.bin/mocha",
+    "lint": "eslint --fix \"{src,test,.scripts}/**/*.js\"",
+    "test": "mocha",
     "arduino-test": "node arduino-test/build-sketches.js",
     "version": "node .scripts/npm_version-update_changelog.js && git add CHANGELOG.md"
   },
@@ -21,7 +21,9 @@
     "prettier": "^1.5.3"
   },
   "dependencies": {
-    "@sensebox/opensensemap-api-models": "0.0.1"
+    "@sensebox/opensensemap-api-models": "0.0.3",
+    "bunyan": "^1.8.12",
+    "mqtt": "^2.14.0"
   },
   "publishConfig": {
     "access": "public"
