add wip test folder

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --fix \"{src,test,.scripts}/**/*.js\"",
-    "test": "mocha",
+    "pretest": "docker-compose -f test/docker-compose.yml up -d",
+    "test": "mocha test/index.js",
+    "posttest": "docker-compose -f test/docker-compose.yml down -v",
     "arduino-test": "node arduino-test/build-sketches.js",
     "version": "node .scripts/npm_version-update_changelog.js && git add CHANGELOG.md"
   },
