gRPC client auth, proto from package, configuration

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "@sensebox/opensensemap-api-models": "0.0.3",
+    "@sensebox/osem-protos": "1.0.0",
     "bunyan": "^1.8.12",
+    "config": "^1.28.1",
     "grpc": "^1.7.3",
     "mqtt": "^2.14.0"
   },
