--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "version": "node .scripts/npm_version-update_changelog.js && git add CHANGELOG.md"
   },
   "devDependencies": {
+    "@sensebox/eslint-config-sensebox": "^1.0.0",
     "chai": "^4.1.0",
     "eslint": "^4.3.0",
-    "@sensebox/eslint-config-sensebox": "0.0.1",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-prettier": "^2.1.2",
-    "mocha": "^3.4.2",
-    "prettier": "^1.5.3"
+    "mocha": "^3.4.2"
   },
   "dependencies": {
     "@sensebox/opensensemap-api-models": "0.0.5",
