--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@sensebox/opensensemap-api-models": "0.0.5",
-    "@sensebox/osem-protos": "1.0.0",
+    "@sensebox/osem-protos": "^1.1.0",
     "bunyan": "^1.8.12",
     "config": "^1.28.1",
     "grpc": "^1.7.3",
