--- a/.github/workflows/registry-build-publish.yaml
+++ b/.github/workflows/registry-build-publish.yaml
@@ -2,7 +2,11 @@ name: Build and publish to Github Container Registry
 
 on:
   push:
-    branches: [ grpc-mqtt ]
+    branches: [ master, grpc-mqtt ]
+    tags: [ 'v*.*.*' ]
+  pull_request:
+    branches:
+      - master
 
 env:
   REGISTRY: ghcr.io
@@ -32,7 +36,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
-            latest=true
+            latest=auto
             prefix=
             suffix=
 
