--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "lint": "eslint --fix \"{src,test,.scripts}/**/*.js\"",
+    "lint": "eslint --ignore-pattern node_modules --fix \"{src,test,.scripts}/**/*.js\"",
+    "lint:ci": "eslint --ignore-pattern node_modules \"{tests,packages}/**/*.js\"",
     "pretest": "docker-compose -f test/docker-compose.yml up -d",
     "test": "mocha test/index.js",
     "posttest": "docker-compose -f test/docker-compose.yml down -v"
