--- a/.github/workflows/registry-build-publish.yaml
+++ b/.github/workflows/registry-build-publish.yaml
@@ -11,7 +11,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  MQTTS_TEST_URL: ${{ secrets.MQTTS_URL }}
 
 jobs:
 
@@ -77,6 +76,7 @@ jobs:
 
       - name: Execute tests
         run: |
+          export MQTTS_TEST_URL=${{ secrets.MQTTS_URL }}
           yarn test
 
   build-and-push-images:
