--- a/.github/workflows/registry-build-publish.yaml
+++ b/.github/workflows/registry-build-publish.yaml
@@ -2,7 +2,7 @@ name: Build and publish to Github Container Registry
 
 on:
   push:
-    branches: [ master, grpc-mqtt ]
+    branches: [ master ]
     tags: [ 'v*.*.*' ]
   pull_request:
     branches:
