Update grpc and mqtt dependencies (#7)
* Update grpc and mqtt packages

* Update grpc server start

* update mosquitto and fix tests

* Use beta release of osem api models

* Set options close to old grpc.load

* Add ghcr workflows

* Update build workflow

* Add tests for mqtts and ws

* Add config parameter for mqtts test url

* Add lint and test jobs

* Build image only if lint and build was successful

* Fix workflow error

* Set env variable for mqtts test client

* Update on push expression

--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,10 +1,13 @@
-version: "2"
+version: "3.9"
 
 services:
   mosquitto:
-    image: eclipse-mosquitto:1.4.12
+    image: eclipse-mosquitto:2.0.12
     ports:
-      - "1884:1883"
+      - "8883:8883"
+      - "8884:8884"
+    volumes:
+      - ./mosquitto:/mosquitto/config
   db:
     image: mongo:3.2
     ports:
