--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/index.js",
-    "lint": "eslint --fix \"{src,test,.scripts}/**/*.js\"",
+    "lint": "eslint --ignore-pattern node_modules --fix \"{src,test,.scripts}/**/*.js\"",
+    "lint:ci": "eslint --ignore-pattern node_modules \"{tests,packages}/**/*.js\"",
     "pretest": "docker-compose -f test/docker-compose.yml up -d",
     "test": "mocha test/index.js",
     "posttest": "docker-compose -f test/docker-compose.yml down -v"
@@ -20,12 +21,11 @@
     "mocha": "^3.4.2"
   },
   "dependencies": {
-    "@sensebox/opensensemap-api-models": "^0.0.12",
+    "@grpc/grpc-js": "^1.3.7",
+    "@grpc/proto-loader": "^0.6.4",
+    "@sensebox/opensensemap-api-models": "0.0.32-beta.0",
     "@sensebox/osem-protos": "^1.1.0",
-    "bunyan": "^1.8.12",
-    "config": "^1.28.1",
-    "grpc": "^1.9.0",
-    "mqtt": "2.15.1"
+    "mqtt": "^4.2.8"
   },
   "publishConfig": {
     "access": "public"
