--- a/.github/workflows/registry-pr-purge.yaml
+++ b/.github/workflows/registry-pr-purge.yaml
@@ -3,6 +3,7 @@ name: Purge Pull Request Image
 # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#registry_package
 # Run cleanup job if a new package was published or updated
 on:
+  workflow_dispatch:
   pull_request:
     types: [closed]
 
@@ -11,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Purge Pull Request Image
-        uses: vlaurin/action-ghcr-prune@v0.1.0
+        uses: vlaurin/action-ghcr-prune@v0.2.0
         with:
           token: ${{ secrets.GHCR_TOKEN}}
           organization: ${{ github.repository_owner}}
