--- a/.github/workflows/registry-purge.yaml
+++ b/.github/workflows/registry-purge.yaml
@@ -3,6 +3,7 @@ name: Docker Registry Cleanup
 # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#registry_package
 # Run cleanup job if a new package was published or updated
 on:
+  workflow_dispatch:
   registry_package:
 
 jobs:
@@ -10,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: clean packages
-        uses: vlaurin/action-ghcr-prune@v0.1.0
+        uses: vlaurin/action-ghcr-prune@v0.2.0
         with:
           token: ${{ secrets.GHCR_TOKEN}}
           organization: ${{ github.repository_owner}}
