--- a/.github/workflows/registry-build-publish.yaml
+++ b/.github/workflows/registry-build-publish.yaml
@@ -77,6 +77,7 @@ jobs:
       - name: Execute tests
         run: |
           export MQTTS_TEST_URL=${{ secrets.MQTTS_URL }}
+          export WSS_TEST_URL=${{ secrets.WSS_URL }}
           yarn test
 
   build-and-push-images:
