--- a/.github/workflows/registry-pr-purge.yaml
+++ b/.github/workflows/registry-pr-purge.yaml
@@ -17,5 +17,5 @@ jobs:
           token: ${{ secrets.GHCR_TOKEN}}
           organization: ${{ github.repository_owner}}
           container: ${{ github.event.repository.name }}
-          tag-regex: /pr-${{github.event.pull_request.number}}$/
+          tag-regex: pr-10
           dry-run: true
