--- a/.github/workflows/registry-pr-purge.yaml
+++ b/.github/workflows/registry-pr-purge.yaml
@@ -3,7 +3,6 @@ name: Purge Pull Request Image
 # https://docs.github.com/en/actions/reference/events-that-trigger-workflows#registry_package
 # Run cleanup job if a new package was published or updated
 on:
-  workflow_dispatch:
   pull_request:
     types: [closed]
 
@@ -17,5 +16,4 @@ jobs:
           token: ${{ secrets.GHCR_TOKEN}}
           organization: ${{ github.repository_owner}}
           container: ${{ github.event.repository.name }}
-          tag-regex: /pr-${{github.event.pull_request.number}}$/
-          dry-run: true
+          tag-regex: pr-${{github.event.pull_request.number}}$
