Update ghcr prune action

--- a/.github/workflows/registry-pr-purge.yaml
+++ b/.github/workflows/registry-pr-purge.yaml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Purge Pull Request Image
-        uses: vlaurin/action-ghcr-prune@v0.2.0
+        uses: vlaurin/action-ghcr-prune@v0.5.0
         with:
           token: ${{ secrets.GHCR_TOKEN}}
           organization: ${{ github.repository_owner}}
           container: ${{ github.event.repository.name }}
-          tag-regex: pr-${{github.event.pull_request.number}}$
+          prune-tags-regexes: pr-${{github.event.pull_request.number}}$
