--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "lint:ci": "eslint --ignore-pattern node_modules \"{tests,packages}/**/*.js\"",
     "pretest": "docker-compose -f test/docker-compose.yml up -d",
     "test": "mocha test/index.js",
-    "posttest": "docker-compose -f test/docker-compose.yml down -v"
+    "posttest": "docker-compose -f test/docker-compose.yml down -v",
+    "only-test": "mocha --inspect-brk test/index.js"
   },
   "devDependencies": {
     "@sensebox/eslint-config-sensebox": "^1.0.0",
     "chai": "^4.1.0",
-    "eslint": "^4.3.0",
-    "mocha": "^3.4.2"
+    "eslint": "^8.31.0",
+    "mocha": "^10.0.0"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
-    "@grpc/proto-loader": "^0.6.4",
+    "@grpc/grpc-js": "^1.8.0",
+    "@grpc/proto-loader": "^0.7.0",
     "@sensebox/opensensemap-api-models": "2.0.3",
     "@sensebox/osem-protos": "^1.1.0",
     "mqtt": "^4.2.8"
