Wait for MongoDB connection

--- a/test/mosquitto/mosquitto.conf
+++ b/test/mosquitto/mosquitto.conf
@@ -1,5 +1,11 @@
 allow_anonymous true
+
+# MQTT Listener
+
 listener 8883
+protocol mqtt
+
+# Websockets Listener
 
 listener 8884
 protocol websockets
