--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@grpc/proto-loader": "^0.7.9",
     "@sensebox/opensensemap-api-models": "3.1.0",
     "@sensebox/osem-protos": "^1.1.0",
-    "mqtt": "^4.2.8"
+    "mqtt": "^4.2.8",
+    "pino": "^8.15.1"
   },
   "publishConfig": {
     "access": "public"
