--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.9.2",
-    "@grpc/proto-loader": "^0.7.0",
-    "@sensebox/opensensemap-api-models": "2.0.3",
+    "@grpc/proto-loader": "^0.7.9",
+    "@sensebox/opensensemap-api-models": "3.1.0",
     "@sensebox/osem-protos": "^1.1.0",
-    "mqtt": "^4.2.8"
+    "mqtt": "^4.2.8",
+    "pino": "^8.15.1"
   },
   "publishConfig": {
     "access": "public"
