--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@grpc/proto-loader": "^0.7.9",
     "@sensebox/opensensemap-api-models": "3.1.0",
     "@sensebox/osem-protos": "^1.1.0",
+    "express": "^4.18.2",
     "mqtt": "^5.0.5",
-    "pino": "^8.15.1"
+    "pino": "^8.15.1",
+    "socket.io": "^4.7.2"
   },
   "publishConfig": {
     "access": "public"
