--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@grpc/proto-loader": "^0.7.9",
     "@sensebox/opensensemap-api-models": "3.1.0",
     "@sensebox/osem-protos": "^1.1.0",
+    "bullmq": "^5.13.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.10.1",
